--- a/HuaShanApp/utils/build.gradle
+++ b/HuaShanApp/utils/build.gradle
@@ -27,6 +27,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:percent:22.2.0'
     testCompile 'junit:junit:4.12'
     compile files('libs/core-3.0.0.jar')
 }
