--- a/HuaShanApp/utils/build.gradle
+++ b/HuaShanApp/utils/build.gradle
@@ -28,6 +28,18 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:percent:22.2.0'
+
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+
+
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex:rxjava:1.0.14'
+    compile 'com.ogaclejapan:rxbinding:1.2.0'
+
+    compile 'com.android.support:recyclerview-v7:22.2.0'
+
     testCompile 'junit:junit:4.12'
     compile files('libs/core-3.0.0.jar')
 }
