--- a/HuaShanApp/utils/build.gradle
+++ b/HuaShanApp/utils/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     compile 'io.reactivex:rxjava:1.0.14'
     compile 'com.ogaclejapan:rxbinding:1.2.0'
 
+    compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
+
     compile 'com.android.support:cardview-v7:22.2.0'
 
     compile 'com.android.support:recyclerview-v7:22.2.0'
