--- a/HuaShanApp/app/build.gradle
+++ b/HuaShanApp/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile project(':waveview')
     compile project(':cacheutils')
     compile project(':recyclerviewpager')
+    compile project(':paymentpassword')
 }
