--- a/HuaShanApp/settings.gradle
+++ b/HuaShanApp/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':gesture_lock', ':utils', ':cacheutils', 'waveview', ':lib', ':recyclerviewpager'
+include ':app', ':gesture_lock', ':utils', ':cacheutils', 'waveview', ':lib', ':recyclerviewpager', ':paymentpassword'
