--- a/HuaShanApp/app/src/main/AndroidManifest.xml
+++ b/HuaShanApp/app/src/main/AndroidManifest.xml
@@ -114,6 +114,18 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
+        <activity
+            android:name=".my.realname.view.activity.AuthenticatedActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+
+        <activity
+            android:name=".my.realname.view.activity.UnauthorizedActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+
 
     </application>
 
