--- a/HuaShanApp/app/src/main/AndroidManifest.xml
+++ b/HuaShanApp/app/src/main/AndroidManifest.xml
@@ -216,6 +216,12 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
+        <activity
+            android:name=".my.transactiondetails.recharge.view.activity.RechargedetailsActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+
     </application>
 
 </manifest>
