--- a/HuaShanApp/app/build.gradle
+++ b/HuaShanApp/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile project(':cacheutils')
     compile project(':recyclerviewpager')
     compile project(':paymentpassword')
+    compile project(':progressbar')
 }
