--- a/HuaShanApp/gesture_lock/build.gradle
+++ b/HuaShanApp/gesture_lock/build.gradle
@@ -19,8 +19,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:percent:22.2.0'
     testCompile 'junit:junit:4.12'
-
+    compile project(':cacheutils')
+    compile project(':utils')
 }
