--- a/HuaShanApp/app/src/main/AndroidManifest.xml
+++ b/HuaShanApp/app/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
         <activity
-            android:name=".user.findpassword.main.view.activity.VerificationActivity"
+            android:name=".user.findpassword.main.view.activity.FindpasswordActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
@@ -248,6 +248,12 @@
 
         <activity
             android:name=".my.transactiondetails.investment.view.activity.InvestmentActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+
+        <activity
+            android:name=".my.security.findgesturepassword.view.activity.FindgesturepasswordActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
