--- a/HuaShanApp/app/build.gradle
+++ b/HuaShanApp/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     compile project(':progressbar')
     compile project(':stickylistview_library')
     compile project(':Indicator')
+    compile files('libs/jcore-android_v1.0.0.jar')
+    compile files('libs/jpush-android_v3.0.0.jar')
 }
