--- a/HuaShanApp/app/src/main/AndroidManifest.xml
+++ b/HuaShanApp/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.karazam.huashanapp">
 
-
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
@@ -34,6 +33,13 @@
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_TASKS" />
+
+    <!--<uses-permission android:name="android.permission.INTERNET" >-->
+    <!--</uses-permission>-->
+    <!--<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" >-->
+    <!--</uses-permission>-->
+    <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" >-->
+    <!--</uses-permission>-->
 
 
     <application
